# cgo-rs

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml
cgo-test/: Cargo.toml  build.rs
cgo-test/src/: lib.rs
cgo-test/tests/: integration.rs
cgo-test/tests/example/: go.mod  main.go
src/: lib.rs
